compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__case__record_update_in_pipeline_in_case_clause.snap
---
source: compiler-core/src/javascript/tests/case.rs
expression: "\npub type Wibble {\n  Wibble(wibble: Int, wobble: Int)\n}\n\nfn identity(x) {\n  x\n}\n\npub fn go(x) {\n  case x {\n    Wibble(1, _) -> Wibble(..x, wibble: 4) |> identity\n    Wibble(_, 3) -> Wibble(..x, wobble: 10) |> identity\n    _ -> panic\n  }\n}\n"
---
----- SOURCE CODE

pub type Wibble {
  Wibble(wibble: Int, wobble: Int)
}

fn identity(x) {
  x
}

pub fn go(x) {
  case x {
    Wibble(1, _) -> Wibble(..x, wibble: 4) |> identity
    Wibble(_, 3) -> Wibble(..x, wobble: 10) |> identity
    _ -> panic
  }
}


----- COMPILED JAVASCRIPT
import { CustomType as $CustomType, makeError } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export class Wibble extends $CustomType {
  constructor(wibble, wobble) {
    super();
    this.wibble = wibble;
    this.wobble = wobble;
  }
}
export const Wibble$Wibble = (wibble, wobble) => new Wibble(wibble, wobble);
export const Wibble$isWibble = (value) => value instanceof Wibble;
export const Wibble$Wibble$wibble = (value) => value.wibble;
export const Wibble$Wibble$0 = (value) => value.wibble;
export const Wibble$Wibble$wobble = (value) => value.wobble;
export const Wibble$Wibble$1 = (value) => value.wobble;

function identity(x) {
  return x;
}

export function go(x) {
  if (x.wibble === 1) {
    let _pipe = new Wibble(4, x.wobble);
    return identity(_pipe);
  } else if (x.wobble === 3) {
    let _pipe = new Wibble(x.wibble, 10);
    return identity(_pipe);
  } else {
    throw makeError(
      "panic",
      FILEPATH,
      "my/mod",
      14,
      "go",
      "`panic` expression evaluated.",
      {}
    )
  }
}
